--- a/css/styles.css
+++ b/css/styles.css
@@ -450,7 +450,7 @@ footer {
   margin: 0 0 15px 0;
 }
 
-.vtimeline-content p {
+.vtimeline-content p, li {
   color: #ada4a4;
   font-size: 0.9em;
   margin: 0;
