--- a/src/components/widgets/MainHead.astro
+++ b/src/components/widgets/MainHead.astro
@@ -8,7 +8,7 @@ interface Props {
 
 const {
 	title = 'Nathan Lannon',
-	description = 'The portfolio for Nathan Lannon',
+	description = 'My portfolio.',
 } = Astro.props;
 ---
 
