fix bug with background

--- a/src/components/common/BackgroundCanvas.astro
+++ b/src/components/common/BackgroundCanvas.astro
@@ -26,6 +26,7 @@ const { variant = 'site' } = Astro.props;
   height:100%;
   z-index:-1;
   pointer-events:none;
+  background-color: var(--gray-850);
 }
 </style>
 
