--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -60,7 +60,7 @@ const skills: Skill[] = (await getCollection("skills"))
 ---
 
 <BaseLayout showTopButton={true}>
-    <div class="stack gap-8 lg:gap-20">
+    <div class="stack">
         <header id="hero" class="hero">
             <BackgroundCanvas variant="hero" />
             <Hero name="Nathan" role="I'm a Software Developer" ctaHref="#projects" />
