--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -79,6 +79,6 @@ const skills: Skill[] = (await getCollection("skills"))
 
 <style>
     .wrapper.stack {
-        padding-bottom: 6rem;
+        padding: 6rem 0;
 	}
 </style>
