--- a/src/components/common/FluidCanvas.astro
+++ b/src/components/common/FluidCanvas.astro
@@ -1,21 +1,8 @@
 ---
-import { mount } from "../../lib/fluid/fluidClient.js";
 ---
 
 <div class="project__image-container fade-up" style="position:relative;">
-    <div id="fluid-root" style="width:100%;height:100%;"></div>
+  <div id="fluid-root" style="width:100%;height:100%;"></div>
 </div>
 
-<script type="module">
-    import { mount } from "./src/lib/fluid/fluidClient.js";
-    mount(document.getElementById("fluid-root"));
-</script>
-
-<style>
-    .project__image-container {
-        border-radius: 1rem;
-        overflow: hidden;
-        background: var(--gray-800, #1f2937);
-        box-shadow: 0 4px 20px rgb(0 0 0 / 0.25);
-    }
-</style>
+<script type="module" src="/src/lib/fluid/fluidCanvasEntry.js"></script>
