fixed fluid sim

--- a/src/components/common/FluidCanvas.astro
+++ b/src/components/common/FluidCanvas.astro
@@ -1,8 +1,10 @@
 ---
 ---
-
 <div class="project__image-container fade-up" style="position:relative;">
   <div id="fluid-root" style="width:100%;height:100%;"></div>
 </div>
 
-<script type="module" src="/src/lib/fluid/fluidCanvasEntry.js"></script>
+<script type="module" src="/fluid/fluidClient.js">
+mount("fluid-root")
+</script>
+
