--- a/src/components/common/FluidCanvas.astro
+++ b/src/components/common/FluidCanvas.astro
@@ -5,6 +5,17 @@
 </div>
 
 <script type="module" src="/fluid/fluidClient.js">
-mount("fluid-root")
+  mount("fluid-root")
 </script>
+
+<style>
+  #fluid-root {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0 4px 20px rgb(0 0 0 / 0.25);
+    border-radius: 1rem;
+    overflow: hidden;
+  }
+</style>
 
