--- a/src/components/portfolio/About.astro
+++ b/src/components/portfolio/About.astro
@@ -84,7 +84,7 @@ const ICON_H = "2.75rem";
     }
     @media (min-width: 60em) {
         .wrapper {
-            /* 60 % text | 40 % pills  */
+            /* 60 % text, 40 % pills  */
             grid-template-columns: 3fr 2fr;
             align-items: center;
         }
