--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -12,6 +12,7 @@
   --gray-600: #a8a8bb;
   --gray-700: #cacadb;
   --gray-800: #e3e3ef;
+  --gray-850: #eaeaf5;
   --gray-900: #f7f7fb;
   --gray-999-basis: 0 0% 100%;
   --gray-999_40: hsla(var(--gray-999-basis) / 0.4);
